syntax = "proto3";
package user.v1;

option csharp_namespace = "Highload.SocialNetwork";

service UserApi {
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc RegisterUser (RegisterUserRequest) returns (RegisterUserResponse);
  rpc User (UserRequest) returns (UserResponse);
}

message LoginRequest {
  string user_id = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}

message RegisterUserRequest {
  UserInfo userInfo = 1;
  string password = 2;
}

message RegisterUserResponse {
  string user_id = 1;
}

message UserRequest {
  string user_id = 1;
}

message UserResponse {
  UserInfo user_info = 1;
}

message UserInfo {
  string first_name = 1;
  string last_name = 2;
  Date birthDate = 3;
  string gender = 4;
  string city = 5;
  string interests = 6;
}

message Date {
  int32 year = 1;
  int32 month = 2;
  int32 day = 3;
}